// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchResults/> should render no results 1`] = `<div />`;

exports[`<SearchResults/> should render results 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  padding: 1.25rem 0;
  color: #434956;
}

.c5 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
  padding: 1.25rem;
  color: #005994;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c2:visited {
  color: #434956;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2:active,
.c2:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
  padding: 1.25rem;
  color: #005994;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c6:visited {
  color: #434956;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:active,
.c6:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c1 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c3 {
  margin: 0;
  font-size: 1.125rem;
  font-weight: bold;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c5 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c5 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <h2>
      Contenu correspondant
    </h2>
    <ul
      class="c1"
    >
      <li
        class=""
      >
        <a
          class="c2 no-after"
          href="http://voila.fr"
          target="_blank"
        >
          <div>
            <h3
              class="c3"
            >
              Mer il est fou!
            </h3>
            
          </div>
        </a>
      </li>
    </ul>
  </div>
  <div
    class="c4"
  >
    <div
      class="c0"
    >
      <div
        class="c5"
      >
        <h2>
          Que dit la loi ?
        </h2>
        <ul
          class="c1"
        >
          <li
            class=""
          >
            <a
              class="c6"
              href="/code-du-travail/mer-il-est-fou?q=search test"
            >
              <div>
                <h3
                  class="c3"
                >
                  Mer il est fou!
                </h3>
                
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SearchResults/> should render results with breadcrumbs 1`] = `
.c1 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  max-width: 46.25rem;
}

.c1 > *:first-child {
  margin-top: 0;
}

.c1 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
  color: #434956;
}

.c2 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  background-color: #fff;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.25rem;
  padding: 1.25rem;
  color: #005994;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: 250ms all;
  transition: 250ms all;
}

.c4:visited {
  color: #434956;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c4:active,
.c4:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c3 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c5 {
  margin: 0;
  font-size: 1.125rem;
  font-weight: bold;
}

@media print {
  .c1 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c2 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c2 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2>
          Que dit la loi ?
        </h2>
        <ul
          class="c3"
        >
          <li
            class=""
          >
            <a
              class="c4"
              href="/code-du-travail/mer-il-est-fou1?q=search test"
            >
              <div>
                <h3
                  class="c5"
                >
                  Mer il est fou 1  !
                </h3>
                
              </div>
            </a>
          </li>
          <li
            class=""
          >
            <a
              class="c4"
              href="/code-du-travail/mer-il-est-fou2?q=search test"
            >
              <div>
                <h3
                  class="c5"
                >
                  Mer il est fou 2!
                </h3>
                
              </div>
            </a>
          </li>
          <li
            class=""
          >
            <a
              class="c4"
              href="/code-du-travail/mer-il-est-fou3?q=search test"
            >
              <div>
                <h3
                  class="c5"
                >
                  Mer il est fou 3!
                </h3>
                
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h2>
          Themes suceptibles de vous intéresser
        </h2>
        <ul
          class="c3"
        >
          <li
            class=""
          >
            <a
              class="c4"
              href="/themes/mer-il-est-fou4?q=search test"
            >
              <div>
                <h3
                  class="c5"
                >
                  Mer il est fou 4!
                </h3>
                
              </div>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
